<resources>
    <string name="app_name">Smart Home Simulator</string>
    <string name="nav_header_title">Smart Home Simulator</string>
    <string name="nav_header_subtitle">Team #20</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_open_layout">Open Layout</string>
    <string name="action_about">About</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_map">House Layout</string>
    <string name="menu_logs">Activity Logs</string>
    <string name="toast_allow_write_permissions">
        Please allow storage permissions to the application and retry saving the layout afterwards.
    </string>
    <string name="toast_allow_read_permissions">
        Please allow storage permissions to the application and retry loading the layout afterwards.
    </string>
    <string name="toast_write_permissions">
        Storage permissions to the application were allowed. Please retry saving the layout.
    </string>
    <string name="toast_read_permissions">
        Storage permissions to the application were allowed. Please retry loading the layout.
    </string>
    <string name="toast_deleted">
        The logs file was successfully deleted.
    </string>
    <string name="toast_could_not_delete">
        The logs file could not be deleted from the device\'s storage. Please try again.
    </string>
    <string name="edit_text_username">Enter username</string>
    <string name="edit_text_password">Enter password</string>
    <string name="button_login">Log in</string>
    <string name="login_page">Welcome to the</string>
    <string name="empty_username_password_fields">Please enter a username and password.</string>
    <string name="wrong_credentials_message">The credentials entered do not correspond to a known account.</string>
    <string name="create_user_button">Create User</string>
    <string name="delete_user_button">Delete User</string>
    <string name="edit_user_welcome">Modify Existing User</string>
    <string name="edit_success">The user account was edited successfully.</string>
    <string name="edit_conflict">The account could not be edited because another user has the same username.</string>
    <string name="edit_user_welcome_create">Create a New User</string>
    <string name="create_user_successful">User was created successfully!</string>
    <string name="create_user_failed">Another user with the same username already exists.</string>
    <string name="create_user_invalid">The values entered are invalid. Please make sure you entered a valid username and password.</string>
    <string name="edit_user_select">Select a user</string>
    <string name="edit_text_new_username">Username</string>
    <string name="edit_text_new_password">Password</string>
    <string name="edit_text_new_permissions">Permissions</string>
    <string name="edit_text_delete_user_title">Deleting user</string>
    <string name="edit_text_delete_user">Are you sure you want to delete the selected user?</string>
    <string name="delete_logged_user_warning">You cannot delete your own account.</string>
    <string name="delete_logged_user_success">The user has been deleted.</string>
    <string name="map_opened">Opened</string>
    <string name="map_closed">Closed</string>
    <string name="map_locked">Locked</string>
    <string name="map_unlocked">Unlocked</string>
    <string name="map_activated">Activated</string>
    <string name="map_deactivated">Deactivated</string>
    <string name="map_information">Information</string>
    <string name="map_legend">Legend</string>
    <string name="map_legend_doors">Doors</string>
    <string name="map_legend_windows">Windows</string>
    <string name="map_legend_lights">Lights</string>
    <string name="map_legend_inhabitants">Inhabitants</string>
    <string name="map_active_layout">Active House Layout</string>
    <string name="map_active_layout_name">Layout Name:</string>
    <string name="map_active_layout_rooms">Number of Rooms:</string>
    <string name="map_active_layout_devices">Number of Devices:</string>
    <string name="map_active_layout_rooms_suffix">rooms</string>
    <string name="map_active_layout_devices_suffix">devices</string>
    <string name="title_activity_edit_map">Edit House Layout</string>
    <string name="layout_name_edit_map">House Layout Name</string>
    <string name="rooms_edit_map">Rooms</string>
    <string name="devices_edit_map">Devices</string>
    <string name="inhabitants_edit_map">Inhabitants</string>
    <string name="heating_zones">Climate Zones</string>
    <string name="remove_room_edit_map">Remove Room</string>
    <string name="room_coordinates_edit_map">Coordinates:</string>
    <string name="room_default_edit_map">(Default)</string>
    <string name="inhabitant_you_edit_map">(You)</string>
    <string name="room_override_text">Overridden</string>
    <string name="add_room_edit_map">Add a Room</string>
    <string name="add_device_edit_map">Add a Device</string>
    <string name="add_inhabitant_edit_map">Add an Inhabitant</string>
    <string name="add_zones_edit_map">Add a Zone</string>
    <string name="add_zones_edit_map_message">How would you like to call this new climate zone?</string>
    <string name="add_inhabitant_invalid">Invalid inhabitant name entered.</string>
    <string name="add_inhabitant_used">This name is already in use. Please choose a different inhabitant name.</string>
    <string name="add_zone_unique">This name is already in use. Please choose a different zone name.</string>
    <string name="add_zone_no_room">No room was added to this zone.</string>
    <string name="no_room_edit_map">There are no rooms in this layout…</string>
    <string name="no_device_edit_map">There are no devices in this room…</string>
    <string name="no_inhabitant_edit_map">There are no inhabitants in this room…</string>
    <string name="select_room_edit_map">You must first select a room…</string>
    <string name="toast_no_remove_device_edit_map">This device cannot be removed from the layout.</string>
    <string name="title_alert_remove_room_edit_map">Remove the room</string>
    <string name="text_alert_remove_room_edit_map">Are you sure you want to remove the room from the house layout ?</string>
    <string name="title_alert_add_room_edit_map">Add a new room</string>
    <string name="title_alert_add_device_edit_map">Add a new device</string>
    <string name="title_alert_remove_device_edit_map">Remove the device</string>
    <string name="text_alert_remove_device_edit_map">Are you sure you want to remove the device from the house layout ?</string>
    <string name="title_alert_add_inhabitant_edit_map">Add a new inhabitant</string>
    <string name="title_alert_add_zone_edit_map">Add a new climate zone</string>
    <string name="title_alert_edit_inhabitant_edit_map">Modify the inhabitant</string>
    <string name="text_alert_error_inhabitant_edit_map">You must select a destination in order to move the inhabitant</string>
    <string name="text_alert_edit_temperature">Modify the climate zone</string>
    <string name="text_alert_move_room">Move the room to a new zone</string>
    <string name="text_alert_device_type">Device Type:</string>
    <string name="text_alert_device_orientation">Orientation:</string>
    <string name="text_alert_device_x">X Coordinate:</string>
    <string name="text_alert_device_y">Y Coordinate:</string>
    <string name="text_alert_device_error">The coordinates you entered were outside the range allowed by the room.</string>
    <string name="text_alert_room_name">Room Name:</string>
    <string name="text_alert_room_x">X Coordinate:</string>
    <string name="text_alert_room_y">Y Coordinate:</string>
    <string name="text_alert_room_width">Room Width:</string>
    <string name="text_alert_room_height">Room Height:</string>
    <string name="field_alert_room_hint">Room Name</string>
    <string name="text_alert_room_empty">Invalid room name entered.</string>
    <string name="text_alert_room_error">The name you have entered is already in use. Please choose a different one.</string>
    <string name="title_alert_save_layout">Save the house layout</string>
    <string name="text_alert_save_layout">How would you like to call this layout ?</string>
    <string name="text_alert_save_layout_default">The active layout is a default layout and cannot be updated. Please choose a name to rename the layout to.\n</string>
    <string name="field_alert_save_layout">Enter the name here</string>
    <string name="field_alert_temperature">Target temperature</string>
    <string name="success_alert_save_layout">The house layout was successfully saved.</string>
    <string name="error_exists_alert_save_layout">A default house layout with this name already exists. Please try using a different layout name.</string>
    <string name="error_unknown_alert_save_layout">Something went wrong while saving the house layout. Please try again later.</string>
    <string name="title_alert_save_layout_overwrite">The layout already exists</string>
    <string name="text_alert_save_layout_overwrite">Are you sure you want to overwrite the selected layout?</string>
    <string name="title_alert_open_layout">Open a house layout</string>
    <string name="text_alert_open_layout">Which layout would you like to open ?</string>
    <string name="title_alert_delete_layout">Delete \"%s\"</string>
    <string name="text_alert_delete_layout">Are you sure you want to delete the selected house layout ?</string>
    <string name="map_no_layout_title">No house layout is loaded</string>
    <string name="map_no_layout_text">Please select a house layout to open to continue.</string>
    <string name="map_no_layout_button">Open a House Layout</string>
    <string name="title_activity_edit_dashboard">Edit Simulation Context</string>
    <string name="missing_house_layout">You must first open a house layout to use this feature.</string>
    <string name="away_disable_message">Inhabitants were detected in the house layout.\n\nPlease remove any inhabitant from the layout before using this feature."</string>
    <string name="away_message_title">\"Away Mode\" cannot be activated</string>
    <string name="edit_text_away_mode_status">Away Mode</string>
    <string name="edit_text_summer_temperature">Summer Target Temperature</string>
    <string name="edit_text_winter_temperature">Winter Target Temperature</string>
    <string name="edit_text_notification_delay">Notification Delay on Detection</string>
    <string name="away_mode_on">On</string>
    <string name="away_mode_off">Off</string>
    <string name="edit_text_simulation_status">Simulation Status</string>
    <string name="simulation_status_started">Started</string>
    <string name="simulation_status_stopped">Stopped</string>
    <string name="edit_text_temperature">Outdoor Temperature</string>
    <string name="edit_text_max_temperature_alert">Maximum Temperature Alert</string>
    <string name="edit_text_min_temperature_alert">Minimum Temperature Alert</string>
    <string name="edit_text_lights_on">Turn Lights On Between</string>
    <string name="edit_text_lights_on_to">to</string>
    <string name="edit_text_time">Simulation Time</string>
    <string name="edit_text_date">Simulation Date</string>
    <string name="edit_text_time_scale">Time Speed (Scaling Factor)</string>
    <string name="edit_context_welcome">Context Parameters</string>
    <string name="edit_context_away">Away Mode</string>
    <string name="edit_context_misc">Miscellaneous Parameters</string>
    <string name="generic_degrees_celsius">°C</string>
    <string name="generic_save">Save</string>
    <string name="alert_map_room_actual">Actual</string>
    <string name="alert_map_room_target">Target</string>
    <string name="alert_map_room_override">Overriding zone target:</string>
    <string name="alert_map_room_ventilation">HVAC status:</string>
</resources>