<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.concordia.smarthomesimulator.fragments.dashboard.DashboardModel"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.concordia.smarthomesimulator.fragments.map.MapModel"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="com.concordia.smarthomesimulator.fragments.logs.LogsModel"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_logs" />
</navigation>