<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Information-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/layout_name_edit_map"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius">
        <EditText
            android:id="@+id/edit_map_layout_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:inputType="textCapWords"
            android:paddingHorizontal="16dp"
            android:background="@drawable/rounded_text_field_background" />
    </androidx.cardview.widget.CardView>

    <!--Rooms-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/rooms_edit_map"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edit_map_room_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_room_edit_map"/>
            <LinearLayout
                android:id="@+id/edit_map_room_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_text_field_background" />
            <Button
                android:id="@+id/edit_map_remove_room"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/remove_room_edit_map"
                android:textColor="@color/accent"
                android:background="@drawable/rounded_outlined_button_background"/>
            <Button
                android:id="@+id/edit_map_add_room"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_room_edit_map"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button_background"
                android:backgroundTint="@color/primary"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--Devices-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/devices_edit_map"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edit_map_device_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/select_room_edit_map"/>
            <TextView
                android:id="@+id/edit_map_device_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_device_edit_map"/>
            <LinearLayout
                android:id="@+id/edit_map_device_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_text_field_background" />
            <Button
                android:id="@+id/edit_map_add_device"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_device_edit_map"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_text_field_background"
                android:backgroundTint="@color/primaryFaded"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--Inhabitants-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/inhabitants_edit_map"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_corner_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/edit_map_inhabitant_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/select_room_edit_map"/>
            <TextView
                android:id="@+id/edit_map_inhabitant_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_inhabitant_edit_map"/>
            <LinearLayout
                android:id="@+id/edit_map_inhabitant_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_text_field_background" />
            <Button
                android:id="@+id/edit_map_add_inhabitant"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/add_inhabitant_edit_map"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_text_field_background"
                android:backgroundTint="@color/primaryFaded"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
